# Autonymous

./: .gitignore  README.md
backend/: Dockerfile  docker-compose.yml  pyproject.toml
backend/Autonymous.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/app/cli/: anonymize.py
