[project]
name = "autonymous"
version = "0.1.0"
description = "A privacy-first SaaS platform for automated document anonymization. Upload documents in various formats, detect and review sensitive information, customize anonymization, and export redacted files securely. Built for legal, healthcare, research, and compliance professionals."
authors = [
    {name = "beatricedaniel",email = "beatrice.yk.daniel@protonmail.com"}
]
license = {text = "AGPL (GNU Affero General Public License)"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
